[FIX] to_backend_theme: openchatter in wrong position

--- a/to_backend_theme/static/src/less/style.less
+++ b/to_backend_theme/static/src/less/style.less
@@ -94,6 +94,9 @@ body a {
     box-shadow: none;
     background-color: @gray-lighter !important;
 }
+.o_followers .o_followers_actions .o_followers_follow_button {
+	width: 110px !important;
+}
 .btn.oe_highlight:hover {
     color: #fff;
     background-color: #68465f !important;
@@ -343,6 +346,7 @@ textarea, select, .o_form_view.o_form_editable .o_form_field_many2manytags,
     }
     
     .o_chatter {
+    	width: 510px !important;
         height: 100vh;
     }
     
